--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Tool Admin Uông Nghĩa</title>
+    <title>ShopUKitem</title>
     <style>
         body {
             background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
