--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
             color: #4ecca3;
             margin-bottom: 10px;
         }
-        .box a, .box button {
-            display: inline-block;
+        /* Cập nhật CSS cho các nút có ảnh và chữ */
+        .box .button-with-icon {
+            display: inline-flex; /* Quan trọng để ảnh và chữ cùng hàng */
+            align-items: center; /* Canh giữa theo chiều dọc */
+            justify-content: center; /* Canh giữa nội dung */
             margin-top: 10px;
             padding: 10px 18px;
             background: #4ecca3;
@@ -51,9 +54,16 @@
             text-decoration: none;
             transition: background 0.3s ease;
         }
-        .box a:hover, .box button:hover {
+        .box .button-with-icon:hover {
             background: #3bb495;
         }
+        .box .button-with-icon img {
+            width: 20px; /* Kích thước icon */
+            height: 20px;
+            margin-right: 8px; /* Khoảng cách giữa icon và chữ */
+            vertical-align: middle; /* Đảm bảo căn chỉnh tốt */
+        }
+
         .footer {
             margin-top: 20px;
             text-align: center;
@@ -86,58 +96,80 @@
 </head>
 <body>
 
-<!-- Thông tin góc trái trên -->
 <div class="top-left-info">
     <strong>Người tạo:</strong> Uông Nghĩa<br>
+    <strong>Người điều hành shop:</strong> Kay<br>
     <a href="https://www.tiktok.com/@unghia._" target="_blank">Kênh TikTok</a>
     <a href="https://www.youtube.com/@Uong-Nghia1011" target="_blank">Kênh YouTube</a>
     <a href="https://www.facebook.com/ungnghiaA" target="_blank">Facebook</a>
 </div>
 
-<h1>🛠️ Thông tin 🛠️</h1>
+<h1>ShopUKitem</h1>
 
 <div class="box">
-    <h2>🔧 Code Setup trên Termux</h2>
-    <button onclick="copySetupCodeTermux()">Copy Code</button>
+    <h2>Corrupted Kitsune(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Kit xanh.png" alt="Kit xanh"> Corrupted Kitsune
+    </a>
 </div>
 
 <div class="box">
-    <h2>📱 Link Termux</h2>
-    <a href="https://play.google.com/store/apps/details?id=com.termux&hl=vi"_blank">Link tải Termux</a>
+    <h2>🦖T-rex(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="T-rex.png" alt="T-rex"> 🦖T-rex(còn 100)
+    </a>
 </div>
-
 <div class="box">
-    <h2>🛠️ Link Tool</h2>
-    <a href="https://drive.google.com/file/d/1582NykPVq-GkcKxtZO1huHKmtnYzeCaP/view?usp=drivesdk" target="_blank">Tool Auto Golike</a><br>
-    <a href="https://discord.com/channels/1393489133695144080/1396350636005789769" target="_blank">Tool Reg Facebook</a><br>
+    <h2>🐝Disco bee(còn 100)</h2></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Disco bee.png" alt="Disco bee"> 🐝Disco bee(còn 100)
+    </a>
+</div>
+    <div class="box">
+    <h2>🐝Queen bee(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Queen bee.png" alt="Queen bee"> 🐝Queen bee(còn 100)
+    </a>
     </div>
-</div>
+    <div class="box">
+    <h2>🦋Butterfly(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Butterfly.png" alt="Butterfly"> 🦋Butterfly(còn 100)
+    </a>
+    </div>
+    <div class="box">
+    <h2>🐼Panda(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Panda.png" alt="Panda"> 🐼Panda(còn 100)
+    </a>
+    </div>
+    <div class="box">
+    <h2>🐈‍⬛Moon cat(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Moon cat.png" alt="Moon cat"> 🐈‍⬛Moon cat(còn 100)
+    </a>
+    </div>
+    <div class="box">
+    <h2>🪰+✈️Dragonfly(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Dragonfly.png" alt="Dragonfly"> 🪰+✈️ Dragonfly(còn 100)
+    </a>
+    </div>
+    <div class="box">
+    <h2>🦊Red fox(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Red fox.png" alt="Moon cat"> 🦊Red fox(còn 100)
+    </a>
+    </div>
+    <div class="box">
+    <h2>🦖Spinosaurus(còn 100)</h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
+        <img src="Spinosaurus.png" alt="Spinosaurus"> 🦖Spinosaurus(còn 100)
+    </a>
+    </div>
 <div class="footer">
     <p>Admin: <b>Uông Nghĩa</b></p>
     <p>TikTok: <a href="https://www.tiktok.com/@unghia._" target="_blank">https://www.tiktok.com/@unghia._</a></p>
 </div>
-
-<script>
-    function copySetupCodeTermux() {
-        const setupCode = `🔥Lệnh Setup (Python)  
-termux-setup-storage && pkg update && pkg upgrade -y && pkg install python php && pkg install python-pip && pip install --upgrade pip 
-👉Nó Hiện "  [Y/n] hoặc [Y/I/N/O/D/Z] " thì nhấn {y} hết cho mình👈
-
-👉Cách Fix Lỗi Chưa Tải Thư Viện Python Khi Gặp Lỗi No Module named 👈
-pip install "tên_thư_viện"
-
-👉Lệnh Nâng Cấp Python 3.11 ⬆ 3.12👈
-pkg install python --upgrade  
-
-👉Lệnh Hạ Python 3.12 ⬇ 3.11👈
-pkg i tur-repo -y && pkg uninstall python -y && pkg uninstall python3.11 -y && pkg install python3.11 -y && mv -f /data/data/com.termux/files/usr/bin/python3.11 /data/data/com.termux/files/usr/bin/python`;
-        navigator.clipboard.writeText(setupCode.trim()).then(function () {
-            alert("✅ Đã copy Code Setup trên Termux!");
-        }, function (err) {
-            alert("❌ Lỗi copy: " + err);
-        });
-    }
-</script>
-
 </body>
 </html>
