--- a/index.html
+++ b/index.html
@@ -114,57 +114,48 @@
 </div>
 
 <div class="box">
-    <h2>🦖T-rex(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="T-rex.png" alt="T-rex"> 🦖T-rex(còn 100)
+    <h2><img src="T-rex.png" alt="T-rex"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🦖T-rex(còn 100)
     </a>
 </div>
 <div class="box">
-    <h2>🐝Disco bee(còn 100)</h2></h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Disco bee.png" alt="Disco bee"> 🐝Disco bee(còn 100)
+    <h2><img src="Disco bee.png" alt="Disco bee"></h2></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🐝Disco bee(còn 100)
     </a>
 </div>
     <div class="box">
-    <h2>🐝Queen bee(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Queen bee.png" alt="Queen bee"> 🐝Queen bee(còn 100)
+    <h2><img src="Queen bee.png" alt="Queen bee"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🐝Queen bee(còn 100)
     </a>
     </div>
     <div class="box">
-    <h2>🦋Butterfly(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Butterfly.png" alt="Butterfly"> 🦋Butterfly(còn 100)
+    <h2><img src="Butterfly.png" alt="Butterfly"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🦋Butterfly(còn 100)
     </a>
     </div>
     <div class="box">
-    <h2>🐼Panda(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Panda.png" alt="Panda"> 🐼Panda(còn 100)
+    <h2><img src="Panda.png" alt="Panda"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🐼Panda(còn 100)
     </a>
     </div>
     <div class="box">
-    <h2>🐈‍⬛Moon cat(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Moon cat.png" alt="Moon cat"> 🐈‍⬛Moon cat(còn 100)
+    <h2><img src="Moon cat.png" alt="Moon cat"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🐈‍⬛Moon cat(còn 100)
     </a>
     </div>
     <div class="box">
-    <h2>🪰+✈️Dragonfly(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Dragonfly.png" alt="Dragonfly"> 🪰+✈️ Dragonfly(còn 100)
+    <h2><img src="Dragonfly.png" alt="Dragonfly"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🪰+✈️ Dragonfly(còn 100)
     </a>
     </div>
     <div class="box">
-    <h2>🦊Red fox(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Red fox.png" alt="Moon cat"> 🦊Red fox(còn 100)
+    <h2><img src="Red fox.png" alt="Red fox"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🦊Red fox(còn 100)
     </a>
     </div>
     <div class="box">
-    <h2>🦖Spinosaurus(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Spinosaurus.png" alt="Spinosaurus"> 🦖Spinosaurus(còn 100)
+    <h2><img src="Spinosaurus.png" alt="Spinosaurus"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> 🦖Spinosaurus(còn 100)
     </a>
     </div>
 <div class="footer">
