--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
             text-decoration: none;
             display: block;
         }
+        .box h2 img {
+    width: 30px;  /* Đặt chiều rộng cố định */
+    height: 30px; /* Đặt chiều cao cố định */
+    object-fit: cover; /* Quan trọng: Ảnh sẽ lấp đầy không gian, có thể bị cắt một phần */
+    vertical-align: middle;
+        }
     </style>
 </head>
 <body>
