--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             display: block;
         }
         .box h2 img {
-    width: 30px;  /* Đặt chiều rộng cố định */
-    height: 30px; /* Đặt chiều cao cố định */
+    width: 100px;  /* Đặt chiều rộng cố định */
+    height: 100px; /* Đặt chiều cao cố định */
     object-fit: cover; /* Quan trọng: Ảnh sẽ lấp đầy không gian, có thể bị cắt một phần */
     vertical-align: middle;
         }
@@ -113,9 +113,8 @@
 <h1>ShopUKitem</h1>
 
 <div class="box">
-    <h2>Corrupted Kitsune(còn 100)</h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon">
-        <img src="Kit xanh.png" alt="Kit xanh"> Corrupted Kitsune
+    <h2><img src="Kit xanh.png" alt="Kit xanh"></h2>
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> Corrupted Kitsune
     </a>
 </div>
 
