--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <div class="box">
     <h2><img src="Kit xanh.png" alt="Kit xanh"></h2>
-    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> Corrupted Kitsune
+    <a href="https://www.messenger.com/e2ee/t/24484181057874571" target="_blank" class="button-with-icon"> Corrupted Kitsune(còn 100)
     </a>
 </div>
 
