--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         }
         .top-left-info {
             position: fixed;
-            top: 600px;
+            top: 620px;
             left: 10px;
             background: rgba(255, 255, 255, 0.8);
             padding: 12px 18px;
@@ -122,61 +122,61 @@
 
 <div class="box">
     <h2><img src="Kit xanh.png" alt="Corrupted kitsune"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Corrupted Kitsune')"> Corrupted Kitsune(còn 100)
+    <a onclick="copyMessage('Corrupted Kitsune')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon"> Corrupted Kitsune(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="T-rex.png" alt="T-rex"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('T-rex')"> 🦖T-rex(còn 100)
+    <a onclick="copyMessage('T-rex')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon"> 🦖T-rex(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Disco bee.png" alt="Disco bee"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Disco bee')"> 🐝Disco bee(còn 100)
+    <a onclick="copyMessage('Disco bee')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐝Disco bee(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Queen bee.png" alt="Queen bee"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Queen bee')"> 🐝Queen bee(còn 100)
+    <a onclick="copyMessage('Queen bee')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐝Queen bee(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Butterfly.png" alt="Butterfly"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Butterfly')"> 🦋Butterfly(còn 100)
+    <a onclick="copyMessage('Butterfly')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🦋Butterfly(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Panda.png" alt="Panda"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Panda')"> 🐼Panda(còn 100)
+    <a onclick="copyMessage('Panda')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐼Panda(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Moon cat.png" alt="Moon cat"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Moon cat')"> 🐈‍⬛Moon cat(còn 100)
+    <a onclick="copyMessage('Moon cat')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐈‍⬛Moon cat(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Dragonfly.png" alt="Dragonfly"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Dragonfly')"> 🪰+✈️ Dragonfly(còn 100)
+    <a onclick="copyMessage('Dragonfly')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🪰+✈️ Dragonfly(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Red fox.png" alt="Red fox"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Red fox')"> 🦊Red fox(còn 100)
+    <a onclick="copyMessage('Red fox')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🦊Red fox(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Spinosaurus.png" alt="Spinosaurus"></h2>
-    <a href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" onclick="copyMessage('Spinosaurus')"> 🦖Spinosaurus(còn 100)
+    <a onclick="copyMessage('Spinosaurus')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🦖Spinosaurus(còn 100)
     </a>
 </div>
 
@@ -185,9 +185,9 @@
     function copyMessage(itemName) {
         const messageToCopy = `Mua ${itemName}`;
         navigator.clipboard.writeText(messageToCopy.trim()).then(function () {
-            alert(`Đã Copy Tin Nhắn. Hãy nhắn: Mua ${itemName}`);
+            alert(`✔️Đã Copy Tin Nhắn. Hãy nhắn: Mua ${itemName}`);
         }, function (err) {
-            alert("❌ Lỗi copy: " + err);
+            alert("❌ Lỗi copy: " + err + `. Hãy nhắn: Mua ${itemName}`);
         });
     }
 </script>
