--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 
 <div class="box">
     <h2><img src="Kit xanh.png" alt="Corrupted kitsune"></h2>
-    <a onclick="copyMessage('Corrupted Kitsune')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon"> Corrupted Kitsune(còn 100)
-    </a>
+    <a onclick="handleButtonClick('Corrupted Kitsune', 'https://www.facebook.com/hoang.bach.601277')" class="button-with-icon"> Corrupted Kitsune(còn 100)
+</a>
 </div>
 
 <div class="box">
     <h2><img src="T-rex.png" alt="T-rex"></h2>
-    <a onclick="copyMessage('T-rex')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon"> 🦖T-rex(còn 100)
+    <a onclick="handleButtonClick('T-rex','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon"> 🦖T-rex(còn 100)
     </a>
 </div>
 
@@ -140,54 +140,55 @@
 
 <div class="box">
     <h2><img src="Queen bee.png" alt="Queen bee"></h2>
-    <a onclick="copyMessage('Queen bee')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐝Queen bee(còn 100)
+    <a onclick="handleButtonClick('Queen bee','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🐝Queen bee(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Butterfly.png" alt="Butterfly"></h2>
-    <a onclick="copyMessage('Butterfly')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🦋Butterfly(còn 100)
+    <a onclick="handleButtonClick('Butterfly','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🦋Butterfly(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Panda.png" alt="Panda"></h2>
-    <a onclick="copyMessage('Panda')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐼Panda(còn 100)
+    <a onclick="handleButtonClick('Panda','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🐼Panda(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Moon cat.png" alt="Moon cat"></h2>
-    <a onclick="copyMessage('Moon cat')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🐈‍⬛Moon cat(còn 100)
+    <a onclick="handleButtonClick('Moon cat','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🐈‍⬛Moon cat(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Dragonfly.png" alt="Dragonfly"></h2>
-    <a onclick="copyMessage('Dragonfly')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🪰+✈️ Dragonfly(còn 100)
+    <a onclick="handleButtonClick('Dragonfly','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🪰+✈️ Dragonfly(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Red fox.png" alt="Red fox"></h2>
-    <a onclick="copyMessage('Red fox')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🦊Red fox(còn 100)
+    <a onclick="handleButtonClick('Red fox','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🦊Red fox(còn 100)
     </a>
 </div>
 
 <div class="box">
     <h2><img src="Spinosaurus.png" alt="Spinosaurus"></h2>
-    <a onclick="copyMessage('Spinosaurus')" href="https://www.facebook.com/hoang.bach.601277" target="_blank" class="button-with-icon" > 🦖Spinosaurus(còn 100)
+    <a onclick="handleButtonClick('Spinosaurus','https://www.facebook.com/hoang.bach.601277')" class="button-with-icon" > 🦖Spinosaurus(còn 100)
     </a>
 </div>
 
 <script>
-    // Hàm chung để copy tin nhắn
-    function copyMessage(itemName) {
+    function handleButtonClick(itemName, url) {
         const messageToCopy = `Mua ${itemName}`;
         navigator.clipboard.writeText(messageToCopy.trim()).then(function () {
             alert(`✔️Đã Copy Tin Nhắn. Hãy nhắn: Mua ${itemName}`);
+            window.open(url, '_blank');
         }, function (err) {
             alert("❌ Lỗi copy: " + err + `. Hãy nhắn: Mua ${itemName}`);
+            window.open(url, '_blank');
         });
     }
 </script>
